--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ p {
 
 .benefit-lead,.benefit-brand,.benefit-cost
  {
-    margin-bottom: 32px;S
+    margin-bottom: 32px;
     color: #ffffff;
 }
 
